--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -245,11 +245,16 @@ nav.nav {
 }
 .services__right {
     margin-left: 130px;
+    margin-top: 35px;
 }
 
 .services__item {
     display: flex;
-    padding: 56px 0px 0px 22px;
+    border-radius: 10px;
+    padding: 21px 60px 20px 22px;
+}
+.services__item:hover {
+    box-shadow: 0px 5px 5px #ebebeb;
 }
 
 .services__circle-icon {
@@ -263,6 +268,7 @@ nav.nav {
     border-radius: 50%;
     background: #eff6fd;
 }
+
 .services__item:first-child .services__circle-icon {
     background: #2e80ce;
 }
@@ -283,5 +289,5 @@ nav.nav {
 }
 .services__btn {
     display: inline-block;
-    margin-top: 75px;
+    margin-top: 55px;
 }
