--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -321,6 +321,10 @@ nav.nav {
     transform: translateY(-16px);
     border-color: #2e80ce;
 }
+.works__item:hover .works__item-link {
+    color: #2e80ce;
+    font-weight: 400;
+}
 
 .works__item-title {
     margin-top: 18px;
@@ -345,4 +349,46 @@ nav.nav {
 .works__item-link {
     display: inline-block;
     margin-top: 18px;
+}
+
+/* --------- take-back ----- */
+.take-back {
+    margin: 170px 0;
+}
+
+.take-back__row {
+    display: flex;
+}
+.take-back__left,
+.take-back__right {
+    flex: 1;
+}
+.tack-back__img--big {
+    width: 512px;
+    height: 370px;
+    border-radius: 6px;
+}
+.take-back__left {
+    position: relative;
+}
+.tack-back__img--small {
+    width: 332px;
+    height: 370px;
+    border-radius: 6px;
+    position: absolute;
+    right: 0;
+    bottom: -83px;
+}
+
+.take-back__main-content {
+    padding: 82px 0 0 130px;
+}
+
+.take-back__desc {
+    margin-top: 18px;
+    width: 468px;
+}
+.take-back__btn {
+    display: inline-block;
+    margin-top: 38px;
 }
