--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -353,7 +353,7 @@ nav.nav {
 
 /* --------- take-back ----- */
 .take-back {
-    margin: 170px 0;
+    margin-top: 170px;
 }
 
 .take-back__row {
@@ -391,4 +391,74 @@ nav.nav {
 .take-back__btn {
     display: inline-block;
     margin-top: 38px;
+}
+/* --------- dentist ----- */
+.virtual-dentist {
+    margin-top: 253px;
+    text-align: center;
+}
+.virtual-dentist__title {
+    text-align: center;
+}
+.virtual-dentist__btn {
+    margin-top: 38px;
+    display: inline-block;
+    padding: 15px 27px;
+}
+
+.virtual-dentist__row {
+    margin-top: 70px;
+    display: flex;
+    gap: 30px;
+}
+.virtual-dentist__doc {
+}
+.virtual-dentist__bg {
+    width: 270px;
+    height: 318px;
+    background: #eaf6ff;
+    border-radius: 6px;
+    position: relative;
+}
+.virtual-dentist_img {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+}
+.virtual-dentist__name {
+    margin-top: 12px;
+    font-size: 16px;
+    line-height: 1.75; /* 175% */
+}
+.virtual-dentist__sub-info {
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 1.85; /* 185.714% */
+}
+.virtual-dentist__controls {
+    margin-top: 38px;
+    display: flex;
+    justify-content: center;
+    gap: 18px;
+}
+.virtual-dentist__control {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 36px;
+    height: 36px;
+    border-radius: 50%;
+    background: #fff;
+    color: #575f66;
+    border: 1px solid #575f66;
+    outline: none;
+}
+.virtual-dentist__control:last-child {
+    transform: rotate(180deg);
+}
+
+.virtual-dentist__control:hover {
+    border-color: #2e80ce;
+    background: #2e80ce;
+    color: #fff;
 }
