--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -777,6 +777,7 @@ nav.nav {
     font-size: 1.4rem;
     font-weight: 600;
     line-height: 1.85; /* 185.714% */
+    border-width: 0;
 }
 .footer__form-btn:hover {
     cursor: pointer;
